# socka-2dengine

./: .gitmodules  CMakeLists.txt  dependencies list.txt  mingw-toolchain.cmake
.cache/clangd/index/: AnimationComponent.h.843583A36A94D2AA.idx  Application.cpp.BB4D512CF0325B3D.idx  Application.h.345CBDBBFD053C6A.idx  AssetManager.cpp.78C8FBA0351E0A90.idx  AssetManager.cpp.8756D4B3B8CF4E1D.idx  AssetManager.h.E7B43A5F23C0963A.idx  BoxColliderComponent.h.E6A3C24406701340.idx  BuildSystem.h.40D79D99AE15DBF2.idx  Camera.cpp.AD5185702E05A8DC.idx  Camera.h.05A3A430449A3E72.idx  CameraComponent.h.12090460E8882A92.idx  CameraSystem.cpp.C009AD2DD78C6385.idx  CameraSystem.h.008C8C9D38F83039.idx  CircleColliderComponent.h.5763216FF420C89D.idx  CollisionSystem.cpp.CD6B10B7954609EA.idx  CollisionSystem.h.92B92915DE403CA5.idx  Component.h.D0EE655D2BC622EE.idx  Console.cpp.C95C6027AD4B5884.idx  Console.h.C918C0F6B9A354C1.idx  EditorApp.cpp.D9C1D9A5A0A7480F.idx  EditorApp.h.C9E83E0EC157007D.idx  Entity.cpp.D53A23BA6E08EC74.idx  Entity.h.2A875FC9FA0B3135.idx  FileSystem.h.17C3C2D61E0D1975.idx  FileWatcher.cpp.7B704AFA002B9658.idx  FileWatcher.h.E726F7B13EC6F8A2.idx  Gizmos.cpp.5C935583B659B397.idx  Gizmos.h.FCCC97AAA5B9B9BF.idx  Global.h.1583DB9EDAECE4A4.idx  Hierarchy.cpp.C27062FD73D08697.idx  ImGuizmo.cpp.93ACD2DD8E291229.idx  ImGuizmo.h.430892BEA5402285.idx  InheritanceComponent.cpp.FC5991196D978BD9.idx  InheritanceComponent.h.795E52C41F1A245F.idx  Input.cpp.36EFC6F9C40AF10E.idx  Input.h.60186F1350AAE365.idx  InputControllerComponent.h.A4F56EC81E2122DA.idx  InputSystem.cpp.061BFD17F8A31AC7.idx  InputSystem.h.2E5B10E4362E0857.idx  Inspector.cpp.C5B52A8F11AC20F1.idx  (+466 more)
NewProject/: NewProject.eproj
NewProject/Export/Linux/: data.config
NewProject/Export/Linux/scenes/: main.json
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
build-linux/editor/: Makefile  cmake_install.cmake
build-linux/engine/: Makefile  cmake_install.cmake
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
build-win/editor/: Makefile  cmake_install.cmake
build-win/engine/: Makefile  cmake_install.cmake
build-windows/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  imgui.ini
build-windows/editor/: Makefile  cmake_install.cmake
build-windows/engine/: Makefile  cmake_install.cmake
build-windows/projects/NewProject/: NewProject.eproj
editor/: CMakeLists.txt
editor/src/: BuildSystem.h  EditorApp.cpp  EditorApp.h  main.cpp  runtime.cpp
editor/src/ui/: AssetManager.cpp  Console.cpp  Console.h  Gizmos.cpp  Gizmos.h  Global.h  Hierarchy.cpp  Inspector.cpp  MainMenu.cpp  ProjectBrowser.cpp  ProjectBrowser.h  Viewport.cpp
editor/tutorials/: scripting tutorial.txt
engine/: CMakeLists.txt
engine/src/core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  FileSystem.h  FileWatcher.cpp  FileWatcher.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Input.cpp  Input.h  Log.cpp  Log.h  Project.h  ProjectSerializer.cpp  ProjectSerializer.h  Time.cpp  Time.h
engine/src/ecs/: Component.h  Entity.cpp  Entity.h  System.cpp  System.h
engine/src/ecs/Lua/: LuaBridge.h
engine/src/ecs/components/: AnimationComponent.h  BoxColliderComponent.h  CameraComponent.h  CircleColliderComponent.h  InheritanceComponent.cpp  InheritanceComponent.h  InputControllerComponent.h  PolygonColliderComponent.h  RigidBodyComponent.h  ScriptComponent.h  SoundComponent.h  SpriteComponent.h  TextComponent.h  TransformComponent.h  VelocityComponent.h
engine/src/ecs/systems/: CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RendererSystem.cpp  RendererSystem.h  ScriptSystem.cpp  ScriptSystem.h  SoundSystem.cpp  SoundSystem.h  TextSystem.cpp  TextSystem.h
engine/src/scene/: Scene.cpp  Scene.h
